--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="hero__row">
                     <div class="hero__desc">
                         <h1 class="hero__title" >Work at the speed
-                          <br>  of thought</h1>
+                          of thought</h1>
                         <p class="hero__text">Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
                         <div class="hero__btns">
                             <a class="hero__btn-link" href="#">Get started</a>
