--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                 <a class="nav__link" href="#"> Customers</a>
                             </li>
                             <li class="nav__item">
-                                <a class="nav__link" href="#"> Pricing</a>
+                                <a class="nav__link" href="pricing.html"> Pricing</a>
                             </li>
                             <li class="nav__item">
                                 <a class="nav__link" href="#">Resources</a>
