changed page piricing

--- a/pricing.html
+++ b/pricing.html
@@ -182,6 +182,45 @@
         </div>
     </section>
 
+    <section class="question">
+        <div class="container">
+            <div class="question__page">
+                <h2 class="question__title title">Frequently asked question</h2>
+                <p class="question__text text">Something is not clear? You need help? Check our FAQ section</p>
+            </div>
+            <ul class="question__list">
+                <li class="question__item">
+                    <div class="question__desc-box row middle">
+                        <button class="question__btn" id="plusModal"><i class='bx bx-plus' id="icon"></i></button>
+                        <h4 class="question__title-down">What are my payment option?</h4>
+                    </div>
+                    <p class="question__text-down" id="modalText">After creating your account you will have an oppurtunity to create your first project that will be associated withthe collaborators e-mail. An invitation  will be sent automatically. Then, invited user will have to confirm his account by e-mail and finish userd onboarding.</p>
+                </li>
+                <li class="question__item">
+                    <div class="question__desc-box row middle">
+                        <button class="question__btn" id="plusModal2"><i class='bx bx-plus' id="icon2"></i></button>
+                        <h4 class="question__title-down">How can I invite collaborator to platform?</h4>
+                    </div>
+                    <p class="question__text-down" id="modalText2">After creating your account you will have an oppurtunity to create your first project that will be associated withthe collaborators e-mail. An invitation  will be sent automatically. Then, invited user will have to confirm his account by e-mail and finish userd onboarding.</p>
+                </li>
+                <li class="question__item">
+                    <div class="question__desc-box row middle">
+                        <button class="question__btn" id="plusModal3"><i class='bx bx-plus' id="icon3"></i></button>
+                        <h4 class="question__title-down">Can I upgrade my plan?</h4>
+                    </div>
+                    <p class="question__text-down" id="modalText3">After creating your account you will have an oppurtunity to create your first project that will be associated withthe collaborators e-mail. An invitation  will be sent automatically. Then, invited user will have to confirm his account by e-mail and finish userd onboarding.</p>
+                </li>
+                <li class="question__item">
+                    <div class="question__desc-box row middle">
+                        <button class="question__btn" id="plusModal4"><i class='bx bx-plus' id="icon4"></i></button>
+                        <h4 class="question__title-down">Can I cancel my plan at anytime?</h4>
+                    </div>
+                    <p class="question__text-down" id="modalText4">After creating your account you will have an oppurtunity to create your first project that will be associated withthe collaborators e-mail. An invitation  will be sent automatically. Then, invited user will have to confirm his account by e-mail and finish userd onboarding.</p>
+                </li>
+            </ul>
+        </div>
+    </section>
+
     <aside class="helps">
         <div class="container">
             <div class="helps__box">
