--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                                 <a class="nav__link" href="pricing.html"> Pricing</a>
                             </li>
                             <li class="nav__item">
-                                <a class="nav__link" href="#">Resources</a>
+                                <a class="nav__link" href="recourses.html">Resources</a>
                             </li>
                         </ul>
                         <div class="nav__btns">
