--- a/recourses.html
+++ b/recourses.html
@@ -29,16 +29,16 @@
                         </button>
                         <ul class="nav__list">
                             <li class="nav__item">
-                                <a class="nav__link active" href="#">Product </a>
+                                <a class="nav__link active" href="index.html">Product </a>
                             </li>
                             <li class="nav__item">
-                                <a class="nav__link" href="#"> Customers</a>
+                                <a class="nav__link" href="customer.html"> Customers</a>
                             </li>
                             <li class="nav__item">
                                 <a class="nav__link" href="pricing.html"> Pricing</a>
                             </li>
                             <li class="nav__item">
-                                <a class="nav__link" href="#">Resources</a>
+                                <a class="nav__link" href="recourses.html">Resources</a>
                             </li>
                         </ul>
                         <div class="nav__btns">
@@ -183,17 +183,17 @@
             </div>
         </div>
     </section>
-    <!-- <div class="container-fluid">
-        <form class="form">
-            <h2 class="form__title">Send a message</h2>
-            <input class="form__name" type="text" name="name" placeholder="Your Name" required> 
-            <input class="form__email" type="email" name="email" placeholder="Your Email" required>
-            <input class="form__text" type="text" name="text" placeholder="Your Message" required>
-            <button class="form__btn" type="submit">Send</button>
+    <div class="container-fluid">
+        <form class="forms">
+            <h2 class="forms__title">Send a message</h2>
+            <input class="forms__name" type="text" name="name" placeholder="Your Name" required> 
+            <input class="forms__email" type="email" name="email" placeholder="Your Email" required>
+            <textarea class="forms__text" name="text" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <button class="forms__btn" type="submit">Send</button>
         </form>
-    </div> -->
-    <!-- <footer class="footer">
-        <div class="container">
+    </div>
+    <footer class="footer">
+        <div class="container-fluid">
             <div class="footer__content">
                 <div class="footer__media media">
                     <div class="footer__img-box"></div>
@@ -258,7 +258,7 @@
             <span class="footer__span">Made With Love By Figmaland All Right Reserved 
             </span>
         </div>
-    </footer> -->
+    </footer>
 
     <script src="js/main.js"></script>
 </body>
