--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                             </button>
                         <ul class="nav__list">
                             <li class="nav__item">
-                                <a class="nav__link active" href="#">Product </a>
+                                <a class="nav__link active" href="index.html">Product </a>
                             </li>
                             <li class="nav__item">
-                                <a class="nav__link" href="#"> Customers</a>
+                                <a class="nav__link" href="customer.html"> Customers</a>
                             </li>
                             <li class="nav__item">
                                 <a class="nav__link" href="pricing.html"> Pricing</a>
