--- a/pricing.html
+++ b/pricing.html
@@ -29,13 +29,13 @@
                                 <a class="nav__link active" href="index.html">Product </a>
                             </li>
                             <li class="nav__item">
-                                <a class="nav__link" href="#"> Customers</a>
+                                <a class="nav__link" href="customer.html"> Customers</a>
                             </li>
                             <li class="nav__item">
-                                <a class="nav__link" href="#"> Pricing</a>
+                                <a class="nav__link" href="pricing.html"> Pricing</a>
                             </li>
                             <li class="nav__item">
-                                <a class="nav__link" href="#">Resources</a>
+                                <a class="nav__link" href="recourses.html">Resources</a>
                             </li>
                         </ul>
                         <div class="nav__btns">
